Fix button icon/text gap

--- a/ckan/public/base/css/main-rtl.css
+++ b/ckan/public/base/css/main-rtl.css
@@ -14159,6 +14159,12 @@ td.diff_header {
   margin: -14px 0 0 -14px;
 }
 
+.btn {
+  display: inline-flex;
+  gap: 0.5rem;
+  align-items: center;
+}
+
 @media (min-width: 576px) {
   .wrapper:before {
     left: initial;
